added verification logic...

--- a/app/src/main/res/layout/activity_host_car.xml
+++ b/app/src/main/res/layout/activity_host_car.xml
@@ -285,7 +285,7 @@
                       android:scaleType="centerCrop"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:src="@drawable/ic_baseline_add_24"/>
+                      android:src="@drawable/ic_plus"/>
               </com.google.android.material.card.MaterialCardView>
 
               <com.google.android.material.card.MaterialCardView
@@ -302,7 +302,7 @@
                       android:scaleType="centerCrop"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:src="@drawable/ic_baseline_add_24"/>
+                      android:src="@drawable/ic_plus"/>
               </com.google.android.material.card.MaterialCardView>
 
               <com.google.android.material.card.MaterialCardView
@@ -319,7 +319,7 @@
                       android:scaleType="centerCrop"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:src="@drawable/ic_baseline_add_24"/>
+                      android:src="@drawable/ic_plus"/>
               </com.google.android.material.card.MaterialCardView>
 
               <com.google.android.material.card.MaterialCardView
@@ -336,7 +336,7 @@
                       android:scaleType="centerCrop"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:src="@drawable/ic_baseline_add_24"/>
+                      android:src="@drawable/ic_plus"/>
               </com.google.android.material.card.MaterialCardView>
 
           </LinearLayout>
@@ -382,7 +382,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -400,7 +400,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -418,7 +418,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -436,7 +436,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
@@ -825,7 +825,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -842,7 +842,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -859,7 +859,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -876,7 +876,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                 </LinearLayout>
@@ -922,7 +922,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -940,7 +940,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -958,7 +958,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -976,7 +976,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                 </LinearLayout>
@@ -1040,7 +1040,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -1057,7 +1057,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -1074,7 +1074,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
