--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grayish_blue1"
+    android:background="@drawable/gradient_background"
     tools:context=".Profile.AccountActivity">
 
 
@@ -50,8 +50,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Edit Avatar"
+        android:text="Name"
         android:textSize="20sp"
+        android:textColor="@color/dark_blue"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/cardView"
@@ -92,17 +94,6 @@
         app:layout_constraintTop_toBottomOf="@+id/accountEmail" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:paddingLeft="25sp"
-        android:text="LOGIN SETTINGS"
-        android:textSize="13sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        tools:layout_editor_absoluteX="0dp" />
-
     <LinearLayout
         android:id="@+id/accountUserName"
         android:layout_width="match_parent"
@@ -120,6 +111,8 @@
             android:paddingLeft="25sp"
             android:text="Name"
             android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="392dp" />
 
@@ -129,7 +122,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:text="User Name" />
+            android:text="User Name"
+            android:textSize="17dp"
+            android:textColor="@color/dark_blue"/>
     </LinearLayout>
 
 
@@ -137,7 +132,7 @@
         android:id="@+id/accountEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -149,7 +144,9 @@
             android:layout_height="wrap_content"
             android:paddingLeft="25sp"
             android:text="Email"
+            android:textColor="@color/black"
             android:textSize="20sp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="429dp" />
 
@@ -159,36 +156,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
-            android:text="User Email" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/resetPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/accountPassword">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="25sp"
-            android:text="Password"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/resetPasswordLocal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:text="Click To Reset Password" />
+            android:text="User Email"
+            android:textSize="17dp"
+            android:textColor="@color/dark_blue"/>
 
 
     </LinearLayout>
@@ -197,30 +167,45 @@
         android:id="@+id/verifyAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resetPassword">
-
-        <TextView
-            android:id="@+id/textView71"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="25sp"
-            android:text="Verify Account"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/accountEmail">
 
         <TextView
             android:id="@+id/verifyAccountBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:text="Click To Verify Account" />
+            android:paddingLeft="25sp"
+            android:text="Verify Account"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/violet"
+            app:layout_constraintStart_toStartOf="parent" />
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/resetPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/verifyAccount">
+
+        <TextView
+            android:id="@+id/resetPasswordLocal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="25sp"
+            android:text="Reset Password"
+            android:textStyle="bold"
+            android:textColor="@color/violet"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
