--- a/app/src/main/res/layout/activity_account_verification.xml
+++ b/app/src/main/res/layout/activity_account_verification.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".Profile.AccountVerification">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -20,25 +22,34 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_back_btn"
-            app:title="ACCOUNT VERIFICATION" />
+            app:title="ACCOUNT VERIFICATION"
+            />
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Identity Verification"
+            android:textStyle="bold"
+            android:textColor="@color/dark_blue"
+            android:textSize="25dp"/>
 
         <TextView
             android:id="@+id/ey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:text="In order to be verified you must submit the requirements."
             android:textColor="@color/dark_blue" />
 
@@ -58,9 +69,10 @@
             android:id="@+id/textView10"
             android:layout_width="317dp"
             android:layout_height="23dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="Driver's License Picture (front and back)\n"
-            android:textColor="@color/dark_blue" />
+            android:textColor="@color/dark_blue"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/linearLayout3"
@@ -83,11 +95,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_add_24" />
+                    android:src="@drawable/ic_plus" />
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cv1"
+                android:id="@+id/cvDL2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
@@ -101,7 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_add_24" />
+                    android:src="@drawable/ic_plus" />
             </com.google.android.material.card.MaterialCardView>
 
 
@@ -111,9 +123,10 @@
             android:id="@+id/ey21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="20dp"
             android:text="Selfie on a clean background"
-            android:textColor="@color/dark_blue" />
+            android:textColor="@color/dark_blue"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -136,7 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_add_24" />
+                    android:src="@drawable/ic_plus" />
             </com.google.android.material.card.MaterialCardView>
 
         </LinearLayout>
@@ -149,6 +162,21 @@
             android:textColor="@color/dark_blue" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/verifyBtn"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="44dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Verify"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:background="@drawable/btn_violet"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
