--- a/app/src/main/res/layout/activity_edit_host_car.xml
+++ b/app/src/main/res/layout/activity_edit_host_car.xml
@@ -284,7 +284,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -301,7 +301,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -318,7 +318,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -335,7 +335,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
@@ -381,7 +381,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -399,7 +399,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -417,7 +417,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -435,7 +435,7 @@
                         android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_add_24" />
+                        android:src="@drawable/ic_plus" />
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
@@ -823,7 +823,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -840,7 +840,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -857,7 +857,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -874,7 +874,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24"/>
+                            android:src="@drawable/ic_plus"/>
                     </com.google.android.material.card.MaterialCardView>
 
                 </LinearLayout>
@@ -920,7 +920,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -938,7 +938,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -956,7 +956,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <com.google.android.material.card.MaterialCardView
@@ -974,7 +974,7 @@
                             android:scaleType="centerCrop"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/ic_baseline_add_24" />
+                            android:src="@drawable/ic_plus" />
                     </com.google.android.material.card.MaterialCardView>
 
                 </LinearLayout>
@@ -1038,7 +1038,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -1055,7 +1055,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -1072,7 +1072,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"/>
+                        android:src="@drawable/ic_plus"/>
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
