--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background_login_signup"
     android:fillViewport="true"
-    tools:context=".LoginRegistration.LoginActivity">
+    tools:context=".LoginSignup.LoginActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
