--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -16,6 +16,7 @@
         android:fontFamily="@font/poppins_bold"
         android:text="Become a host"
         android:textSize="40dp"
+        android:textStyle="bold"
         android:textColor="@color/dark_blue1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +34,12 @@
     <Button
         android:id="@+id/hostBtn"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
         android:fontFamily="@font/poppins_bold"
         android:text="SHARE MY VEHICLE"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:background="@drawable/btn_violet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
