--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/white1</item><!--button color-->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/grayish_blue2</item> <!--notif bar-->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/status_bar</item> <!--notif bar-->
         <!-- Customize your theme here. -->
     </style>
 
