--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -9,8 +9,8 @@
 
 
     <LinearLayout
-        android:layout_width="216dp"
-        android:layout_height="462dp"
+        android:layout_width="1080px"
+        android:layout_height="1920px"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,12 +18,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.445">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="485dp"
-            android:contentDescription="TODO"
-            app:srcCompat="@drawable/logo" />
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gifImageView"
+            android:layout_width="1080px"
+            android:layout_height="1920px"
+            android:src="@drawable/splash"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
