--- a/app/src/main/res/layout/activity_account_verification.xml
+++ b/app/src/main/res/layout/activity_account_verification.xml
@@ -41,8 +41,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Identity Verification"
+            android:fontFamily="@font/poppins_regular"
             android:textStyle="bold"
-            android:textColor="@color/dark_blue"
+            android:textColor="@color/dark_blue1"
             android:textSize="25dp"/>
 
         <TextView
@@ -51,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="In order to be verified you must submit the requirements."
-            android:textColor="@color/dark_blue" />
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/dark_blue1" />
 
         <TextView
             android:id="@+id/ey1"
@@ -59,7 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="Upload down below the following:"
-            android:textColor="@color/dark_blue"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/dark_blue1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.08"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +74,8 @@
             android:layout_height="23dp"
             android:layout_marginTop="20dp"
             android:text="Driver's License Picture (front and back)\n"
-            android:textColor="@color/dark_blue"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/dark_blue1"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -87,7 +91,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                app:strokeColor="@color/black"
+                app:strokeColor="@color/dark_blue1"
                 app:strokeWidth="1dp">
 
                 <ImageView
@@ -124,6 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="Selfie on a clean background"
             android:textColor="@color/dark_blue"
             android:textStyle="bold" />
@@ -141,7 +146,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                app:strokeColor="@color/black"
+                app:strokeColor="@color/dark_blue1"
                 app:strokeWidth="1dp">
 
                 <ImageView
@@ -159,7 +164,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:text="Please wait for your account to be verified thank you."
-            android:textColor="@color/dark_blue" />
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/dark_blue1" />
 
     </LinearLayout>
 
@@ -168,10 +174,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_regular"
         android:text="Verify"
         android:textSize="18sp"
-        android:textStyle="bold"
         android:background="@drawable/btn_violet"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
