--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -71,7 +71,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
                     android:text="Brand Model Year"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@color/dark_blue1"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
@@ -81,7 +82,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="20dp"
                     android:text="Location"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@color/dark_blue1"
                     android:textSize="15dp" />
 
                 <LinearLayout
@@ -95,7 +97,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:text="₱ "
-                        android:textColor="@color/red"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/violet"
                         android:textSize="15dp" />
 
                     <TextView
@@ -104,7 +107,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:text="Price"
-                        android:textColor="@color/red"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/violet"
                         android:textSize="15dp" />
 
                     <TextView
@@ -112,8 +116,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:text="per day"
+                        android:fontFamily="@font/poppins_regular"
                         android:paddingLeft="5dp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
                         android:textSize="15dp" />
 
                 </LinearLayout>
@@ -136,8 +141,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="CAR SPECS"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="13sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
                     <LinearLayout
@@ -165,7 +171,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="13dp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textColor="@color/dark_blue1"
                                 android:text="Automatic"/>
 
                         </LinearLayout>
@@ -188,7 +195,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="13dp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textColor="@color/dark_blue1"
                                 android:text="Drivetrain"/>
 
                         </LinearLayout>
@@ -213,7 +221,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="13dp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textColor="@color/dark_blue1"
                                 android:text="Seats"/>
 
                         </LinearLayout>
@@ -249,7 +258,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="13dp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textColor="@color/dark_blue1"
                                 android:text="Type"/>
 
                         </LinearLayout>
@@ -275,7 +285,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="13dp"
-                                android:textColor="@color/black"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textColor="@color/dark_blue1"
                                 android:text="Fuel Type"/>
 
                         </LinearLayout>
@@ -299,8 +310,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="DISTANCE PER DAY"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="13sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
                     <TextView
@@ -309,13 +321,15 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:textSize="20dp"
-                        android:textColor="@color/black"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/dark_blue1"
                         android:text="Mileage"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Php 100 will be charged for each additional mile"/>
 
                 </LinearLayout>
@@ -335,8 +349,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="DESCRIPTION"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="13sp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
                     <TextView
@@ -344,6 +359,8 @@
                         android:layout_marginTop="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/dark_blue1"
                         android:text="No description"/>
 
                 </LinearLayout>
@@ -362,9 +379,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="HOSTED BY: "
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="13sp"
                         android:textStyle="bold"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark_blue1"
                         android:layout_marginLeft="20dp"/>
 
                     <LinearLayout
@@ -396,7 +414,8 @@
                             android:layout_marginTop="10dp"
                             android:paddingLeft="20dp"
                             android:text="Host name"
-                            android:textColor="@color/black"
+                            android:fontFamily="@font/poppins_regular"
+                            android:textColor="@color/dark_blue1"
                             android:textSize="16dp"
                             android:textStyle="bold" />
 
@@ -423,7 +442,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
                             android:text="₱ "
-                            android:textColor="@color/black"
+                            android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
                         <TextView
@@ -432,7 +451,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
                             android:text="Price"
-                            android:textColor="@color/black"
+                            android:fontFamily="@font/poppins_regular"
+                            android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
                         <TextView
@@ -440,7 +460,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
                             android:text="/day"
-                            android:textColor="@color/black"
+                            android:fontFamily="@font/poppins_regular"
+                            android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
                     </LinearLayout>
@@ -451,6 +472,7 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:visibility="visible"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Book now"/>
 
                 </LinearLayout>
