--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -17,37 +17,41 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="198dp"
-            android:layout_height="200dp"
-            app:srcCompat="@drawable/logo1" />
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginTop="100dp"
+            app:srcCompat="@drawable/tara_logo" />
+
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="20dp"
+
             android:layout_marginRight="50dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="The key to your destination."
-            android:textColor="@color/violet"
+            android:fontFamily="@font/poppins_regular"
+            android:text="The key to your \n destination."
+            android:textColor="#0a1e53"
             android:textSize="40sp"
-            android:textStyle="bold"/>
+            android:textStyle="normal"
+            android:gravity="center"/>
+
+
 
         <Button
             android:id="@+id/loginBtn2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="250dp"
             android:layout_marginRight="50dp"
             android:background="@drawable/btn_violet"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/poppins_regular"
             android:paddingTop="5dp"
             android:text="GET STARTED"
             android:textColor="@color/white1"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
