--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="70dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/poppins_regular"
             android:text="Login"
             android:textColor="@color/white"
             android:textSize="50dp"
@@ -94,7 +94,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/poppins_regular"
             android:text="Login"
             android:textStyle="bold"
             android:textColor="@color/violet"
