--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -21,7 +21,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="44dp"
             android:src="@drawable/check" />
 
     </androidx.cardview.widget.CardView>
