--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="70dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/poppins_regular"
             android:text="Sign Up"
             android:textColor="@color/white"
             android:textSize="50sp"
@@ -122,7 +122,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/poppins_regular"
             android:text="Sign up"
             android:textColor="@color/violet"
             android:textSize="16sp"
