--- a/app/src/main/res/layout/custom_loading.xml
+++ b/app/src/main/res/layout/custom_loading.xml
@@ -30,7 +30,8 @@
                     android:id="@+id/progressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp" />
+                    android:layout_marginTop="100dp"
+                    android:outlineSpotShadowColor="@color/dark_blue1"/>
 
                 <TextView
                     android:id="@+id/txtLoading"
@@ -39,7 +40,8 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="100dp"
                     android:text="Loading"
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@color/dark_blue1"
                     android:textSize="18sp" />
             </LinearLayout>
 
