--- a/app/src/main/res/layout/fragment_book_car.xml
+++ b/app/src/main/res/layout/fragment_book_car.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_regular"
         android:text="Book a Car"
         android:textSize="40dp"
         android:textColor="@color/dark_blue1"
@@ -36,7 +36,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_regular"
         android:text="Book now"
         android:textSize="18sp"
         android:textStyle="bold"
