--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -19,8 +19,8 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/poppins_bold"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_regular"
             android:text="Explore"
             android:textColor="@color/dark_blue1"
             android:textSize="30dp"
@@ -49,6 +49,7 @@
                 android:layout_height="35dp"
                 android:background="@drawable/et_background"
                 app:queryHint="I need car at..."
+
                 app:iconifiedByDefault="false"/>
 
         </LinearLayout>
