--- a/app/src/main/res/layout/message_dialog.xml
+++ b/app/src/main/res/layout/message_dialog.xml
@@ -10,6 +10,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:cardElevation="10dp"
         app:cardCornerRadius="20dp"
         app:cardBackgroundColor="@color/white2">
 
@@ -24,29 +25,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
+                android:fontFamily="@font/poppins_regular"
                 android:text="You're account must be verified"
                 android:textStyle="bold"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:textColor="@color/dark_blue" />
 
             <TextView
                 android:id="@+id/tvSubMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/poppins_regular"
                 android:textStyle="bold"
                 android:text="Go to Profile -> Account -> Verify Account"
                 android:textColor="@color/dark_blue"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/okayBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="100dp"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Okay"
-                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textColor="@color/white1"
                 android:textSize="18sp"
-                android:background="@drawable/btn_login_signup"
+                android:background="@drawable/btn_violet"
                 android:backgroundTint="@color/violet" />
 
         </LinearLayout>
