--- a/app/src/main/res/layout/reset_email_dialog.xml
+++ b/app/src/main/res/layout/reset_email_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
         app:cardBackgroundColor="@color/white2">
 
         <LinearLayout
@@ -26,6 +27,7 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Enter email adress"
                 android:textStyle="bold"
                 android:textSize="20dp"
@@ -38,27 +40,30 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:textColor="@color/dark_blue"
+                android:textColor="@color/dark_blue1"
                 android:inputType="text"
                 android:maxLines="1"
                 android:hint="Email"
+                android:textColorHint="@color/dark_blue1"
                 android:backgroundTint="@color/dark_blue"
-                android:drawableTint="@color/dark_blue"
+                android:drawableTint="@color/dark_blue1"
                 android:drawableStart="@drawable/ic_email"
                 android:drawablePadding="10dp"
                 android:paddingBottom="15dp"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/resetBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="100dp"
                 android:text="Reset password"
                 android:textColor="@color/white"
                 android:paddingRight="15dp"
                 android:paddingLeft="15dp"
-                android:background="@drawable/btn_login_signup"
+                android:background="@drawable/btn_violet"
                 android:backgroundTint="@color/violet" />
 
         </LinearLayout>
