--- a/app/src/main/res/drawable/textbox.xml
+++ b/app/src/main/res/drawable/textbox.xml
@@ -3,7 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/colorPrimary" />
+            <stroke android:width="2dp" android:color="@color/dark_blue1"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
