--- a/app/src/main/res/layout/fragment_book_car.xml
+++ b/app/src/main/res/layout/fragment_book_car.xml
@@ -33,9 +33,11 @@
 
     <Button
         android:id="@+id/bookNowBtn"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:fontFamily="@font/poppins_regular"
         android:text="Book now"
         android:textSize="18sp"
