--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Become a host"
+        android:text="Become a Host"
         android:textSize="40dp"
         android:textStyle="bold"
         android:textColor="@color/dark_blue1"
