--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
 
     <color name="green">#58b996</color>
     <color name="green2">#c6f7e7</color>
+    <color name="green3">#08FF6B</color>
     <color name="status_bar">#3f77ab</color>
 
 
