--- a/app/src/main/res/layout/booked_item.xml
+++ b/app/src/main/res/layout/booked_item.xml
@@ -10,26 +10,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="100dp">
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/ivbCarImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_profile"/>
 
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="10dp">
+            android:paddingLeft="5dp"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tvbBmy"
@@ -37,24 +40,46 @@
                 android:layout_height="wrap_content"
                 android:text="Brand Model year"
                 android:textColor="@color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/tvbLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location"
+                android:textSize="13dp"
                 android:textColor="@color/black"/>
-            <TextView
-                android:id="@+id/tvbPrice"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price"
-                android:textColor="@color/black"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="₱"
+                    android:textSize="13dp"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:id="@+id/tvbPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Price"
+                    android:textSize="13dp"
+                    android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/day"
+                    android:textSize="13dp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/tvbHost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hosted by"
+                android:textSize="13dp"
                 android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/tvbookDate"
