--- a/app/src/main/res/layout/fragment__booked_cars.xml
+++ b/app/src/main/res/layout/fragment__booked_cars.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Bookings.BookingsFragmentMenu"
-    android:background="@color/grayish_blue1"
+    android:background="@drawable/gradient_background"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
